--- a/P009563.opf/layers/v001/Pagination.yml
+++ b/P009563.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: ea0616bd086f468794e827d0284b7f8a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   501027f23e4e43a6bf3288e42eefdbda:
