--- a/P009563.opf/meta.yml
+++ b/P009563.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P009563
 initial_creation_type: ocr
+created_at: 29/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W2PD19192
   title: 'སོག་པོ་མཁས་པ་རྣམས་ཀྱི་བོད་སྐད་དུ་བརྩམས་པའི་གསུང་འབུམ་དཀར་ཆག
